# integrator

./: Cargo.toml  LICENSE.txt
src/: bivec.rs  circle.rs  constant.rs  fixed.rs  float.rs  integrate.rs  lib.rs  line.rs  matrix.rs  percent.rs  plane.rs  point.rs  rotor.rs  segment.rs  shape.rs  sphere.rs  traits.rs  vec.rs  vector.rs
