[package]
name = "integrator"
description = "A math library"
version = "0.1.25"
edition = "2021"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]
default = ["high_precision"]
low_precision = []
high_precision = []
