[package]
name = "integrator"
description = "A math library"
version = "0.1.40"
edition = "2021"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.203", features=["derive"]}


[features]
default = ["high_precision"]
low_precision = []
high_precision = []
float_ulp_comparisons = []